--- a/notes-app/style.css
+++ b/notes-app/style.css
@@ -12,7 +12,7 @@ html {
 
 body {
   background: rgb(228, 217, 195);
-  width: 600px;
+  width: 1000px;
   margin: auto;
   margin-top: 20px;
   padding: 20px;
@@ -25,12 +25,13 @@ body {
 }
 
 input[type=text] {
-  width: 80%;
+  width: 70%;
   background: #fefefe;
   border-radius: 4px;
   padding: 10px 8px;
   border: 1px solid #444;
   font-size: 20px;
+  margin-right: 20px;
 }
 
 button {
@@ -41,4 +42,9 @@ button {
   font-size: 18px;
   cursor: pointer;
   box-shadow: 5px 5px 10px #0d330e;
+  display: inline-block;
+}
+
+#note-button {
+  margin-right: 10px;
 }
